OmnidirectionalChassis_C_board_2026/MDK-ARM/.vscode/uv4.log
*** Using Compiler 'V6.22', folder: 'F:\keil5\ARM\ARMCLANG\Bin'
Build target 'OmnidirectionalChassis_C_board_2026'
Note: source file '.\User\HighLayer\Capacitor.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Capacitor.o' to 'OmnidirectionalChassis_C_board_2026\capacitor_1.o'.Note: source file '.\User\HighLayer\chassis.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\chassis.o' to 'OmnidirectionalChassis_C_board_2026\chassis_1.o'.Note: source file '.\User\HighLayer\Communication.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Communication.o' to 'OmnidirectionalChassis_C_board_2026\communication_1.o'.Note: source file '.\User\HighLayer\Control.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Control.o' to 'OmnidirectionalChassis_C_board_2026\control_1.o'.Note: source file '.\User\HighLayer\Monitor.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Monitor.o' to 'OmnidirectionalChassis_C_board_2026\monitor_1.o'.Note: source file '.\User\MidLayer\Algorithms\algorithm\adrc.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\adrc.o' to 'OmnidirectionalChassis_C_board_2026\adrc_1.o'.Note: source file '.\User\MidLayer\Algorithms\algorithm\pid.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\pid.o' to 'OmnidirectionalChassis_C_board_2026\pid_1.o'.Note: source file '.\User\MidLayer\Algorithms\filter\Low-pass filter.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Low-pass filter.o' to 'OmnidirectionalChassis_C_board_2026\low-pass filter_1.o'.Note: source file '.\User\MidLayer\Algorithms\kinematics\chassis_kinematics.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\chassis_kinematics.o' to 'OmnidirectionalChassis_C_board_2026\chassis_kinematics_1.o'.Note: source file '.\User\MidLayer\Algorithms\odometry\odometry.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\odometry.o' to 'OmnidirectionalChassis_C_board_2026\odometry_1.o'.Note: source file '.\User\MidLayer\Controllers\chassis_control\chassis_control.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\chassis_control.o' to 'OmnidirectionalChassis_C_board_2026\chassis_control_1.o'.Note: source file '.\User\MidLayer\Controllers\signal_processing\target.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\target.o' to 'OmnidirectionalChassis_C_board_2026\target_1.o'.Note: source file '.\User\MidLayer\Managers\comm_manager\Callback.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Callback.o' to 'OmnidirectionalChassis_C_board_2026\callback_1.o'.Note: source file '.\User\MidLayer\Managers\comm_manager\CtoA.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\CtoA.o' to 'OmnidirectionalChassis_C_board_2026\ctoa_1.o'.Note: source file '.\User\MidLayer\Managers\power_manager\power.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\power.o' to 'OmnidirectionalChassis_C_board_2026\power_1.o'.Note: source file '.\User\MidLayer\Managers\state_manager\state.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\state.o' to 'OmnidirectionalChassis_C_board_2026\state_1.o'.Note: source file '.\User\LowLayer\Equipment\capacitor\Anhe.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Anhe.o' to 'OmnidirectionalChassis_C_board_2026\anhe_1.o'.Note: source file '.\User\LowLayer\Equipment\capacitor\Developed.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Developed.o' to 'OmnidirectionalChassis_C_board_2026\developed_1.o'.Note: source file '.\User\LowLayer\Equipment\imu\CH104.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\CH104.o' to 'OmnidirectionalChassis_C_board_2026\ch104_1.o'.Note: source file '.\User\LowLayer\Equipment\imu\HI12.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\HI12.o' to 'OmnidirectionalChassis_C_board_2026\hi12_1.o'.Note: source file '.\User\LowLayer\Equipment\motor\djimotor.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\djimotor.o' to 'OmnidirectionalChassis_C_board_2026\djimotor_1.o'.Note: source file '.\User\LowLayer\Equipment\remote\Dr16.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\Dr16.o' to 'OmnidirectionalChassis_C_board_2026\dr16_1.o'.Note: source file '.\User\LowLayer\HAL_\can\can_driver.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\can_driver.o' to 'OmnidirectionalChassis_C_board_2026\can_driver_1.o'.Note: source file '.\User\LowLayer\HAL_\gpio\gpio_driver.cpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\gpio_driver.o' to 'OmnidirectionalChassis_C_board_2026\gpio_driver_2.o'.Note: source file '.\User\LowLayer\HAL_\gpio\gpio_driver.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\gpio_driver.o' to 'OmnidirectionalChassis_C_board_2026\gpio_driver_1.o'.Note: source file '.\User\LowLayer\HAL_\pwm\pwm_driver.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\pwm_driver.o' to 'OmnidirectionalChassis_C_board_2026\pwm_driver_1.o'.Note: source file '.\User\LowLayer\HAL_\uart\uart_driver.hpp' - object file renamed from 'OmnidirectionalChassis_C_board_2026\uart_driver.o' to 'OmnidirectionalChassis_C_board_2026\uart_driver_1.o'.compiling Dr16.hpp...
compiling state.cpp...
compiling Monitor.cpp...
compiling Monitor.hpp...
compiling state.hpp...
compiling Dr16.cpp...
User/LowLayer/Equipment/motor/djimotor.hpp(5): error: '../User/MidLayer/State/state.hpp' file not found
    5 | #include "../User/MidLayer/State/state.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
compiling djimotor.hpp...
User/LowLayer/Equipment/motor/djimotor.cpp(1): warning: In file included from...User/LowLayer/Equipment/motor\djimotor.hpp(5): error: '../User/MidLayer/State/state.hpp' file not found
    5 | #include "../User/MidLayer/State/state.hpp"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
compiling djimotor.cpp...
"OmnidirectionalChassis_C_board_2026\OmnidirectionalChassis_C_board_2026.axf" - 2 Error(s), 0 Warning(s).
Target not created.
Build Time Elapsed:  00:00:03
